<resources>
    <string name="app_name">kwik.me</string>
    <string name="action_settings">Settings</string>

    <!-- Base Activity -->
    <string name="base_activity_back">Back</string>
    <string name="base_activity_next">Next</string>

    <!-- Start Activity -->
    <string name="start_activity_log_in">Log In</string>
    <string name="start_activity_sign_up">Sign Up</string>
    <string name="start_activity_sign_in_with_facebook">Sign In with Facebook</string>
    <string name="start_activity_terms_and_conditions">&lt;font color=#a1a1a1&gt; By signing in you are agreeing to the&lt;//font&gt;&lt;b&gt; Terms \u0026 Conditions &lt;//b&gt;</string>

    <!-- Signup Activity -->
    <string name="sign_up_activity_title">SIGN UP</string>
    <string name="sign_up_activity_used_for_delivery_coordination">Used for delivery coordination</string>
    <string name="sign_up_activity_phone_hint">Phone</string>
    <string name="sign_up_activity_name_hint">Name</string>

    <!-- Login Activity -->
    <string name="log_in_activity_phone_hint">Phone</string>
    <string name="log_in_activity_used_for_delivery_coordination">Used for delivery coordination</string>

    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>

</resources>
