<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.kwik.app.SignupActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_up_activity_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        >

        <EditText
            android:id="@+id/sign_up_activity_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_name_hint"
            android:singleLine="true"
            android:lines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_up_activity_phone_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/sign_up_activity_phone_input_layout_margin_top">

        <EditText
            android:id="@+id/sign_up_activity_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_phone_hint"
            android:singleLine="true"
            android:lines="1"/>

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_activity_used_for_delivery_coordination"
        android:textColor="@color/kwik_me_gray_comments"
        android:background="@android:color/transparent"
        android:textSize="@dimen/sign_up_activity_comment_text_size"
        android:typeface="normal"
        android:layout_marginTop="@dimen/sign_up_activity_comment_margin_top"/>

    <include
        android:id="@+id/sign_up_activity_common_ui"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_base" />

</LinearLayout>
