<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.kwik.app.StartActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kwik_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/start_activity_logo_margin_top"/>

    <ImageView
        android:id="@+id/start_activity_animation_image_view"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/start_activity_animation_margin_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/start_activity_buttons_margin_top"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_activity_log_in_button"
            android:layout_weight="12"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:text="@string/start_activity_log_in"
            android:onClick="loginClicked"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/start_activity_sign_up_button"
            android:layout_weight="12"
            android:onClick="signupClicked"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:text="@string/start_activity_sign_up" />

    </LinearLayout>

    <TextView
        android:id="@+id/start_activity_facebook_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/start_activity_sign_in_with_facebook"
        android:textColor="@color/kwik_me_facebook_color"
        android:textStyle="bold"
        android:textSize="15sp"
        android:drawableLeft="@drawable/fb_icon"
        android:drawablePadding="8dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/start_activity_terms_and_conditions_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="35dp"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
